# python-template

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  flake.nix  lefthook.yml  pyproject.toml  ruff.toml  shell.nix
.github/workflows/: ci.yml  update-deps.yml
apps/example/: pyproject.toml
apps/example/src/example/: __init__.py  main.py
scripts/: setup.py
