[project]
name = "python-template"
version = "0.0.0"
description = "Python project template"
requires-python = ">=3.13"
license = "MIT"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15", "ty>=0.0.24", "core", "utils", "example"]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/utils/tests"]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
core = { workspace = true }
utils = { workspace = true }
example = { workspace = true }

[tool.ty.environment]
python-version = "3.13"
