[project]
name = "example"
version = "0.0.0"
description = "Example application"
requires-python = ">=3.13"
license = "MIT"
dependencies = ["utils"]

[project.scripts]
example = "example.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example"]

[tool.uv.sources]
utils = { workspace = true }
